--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <header>
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div>
-        <h3 class="float-md-start mb-0 text-uppercase">{{ site.title }}</h3>
-        <nav class="nav justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="{{ site.baseurl }}">Home</a>
-          <a class="nav-link" href="{{ 'team' | relative_url }}">Team</a>
-          <a class="nav-link" href="{{ 'gallery' | relative_url }}">Gallery</a>
+        <a href="{{ site.baseurl }}" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">{{ site.title }}</a>
+        <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <a class="nav-link px-2 link-secondary" aria-current="page" href="{{ site.baseurl }}">Home</a>
+          <a class="nav-link px-2 link-dark" href="{{ 'team' | relative_url }}">Team</a>
+          <a class="nav-link px-2 link-dark" href="{{ 'gallery' | relative_url }}">Gallery</a>
         </nav>
       </div>
     </header>
