--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,21 +16,23 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-      <div>
+    <div class="container">
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="{{ site.baseurl }}" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           <a class="nav-link px-2 link-secondary" aria-current="page" href="{{ site.baseurl }}">Home</a>
           <a class="nav-link px-2 link-dark" href="{{ 'team' | relative_url }}">Team</a>
           <a class="nav-link px-2 link-dark" href="{{ 'gallery' | relative_url }}">Gallery</a>
         </nav>
-      </div>
-    </header>
+      </header>
+    </div>
     <main>
       {{ content }}
     </main>
     <footer>
-      <small>© 2022 TESA FC.</small>
+      <div class="container">
+        <small>© 2022 TESA FC.</small>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
