--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
   <body>
     <div class="container">
       <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <a href="{{ site.baseurl }}" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">{{ site.title }}</a>
+        <a href="{{ site.baseurl | relative_url }}" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <a class="nav-link px-2 link-secondary" aria-current="page" href="{{ site.baseurl }}">Home</a>
+          <a class="nav-link px-2 link-secondary" href="{{ site.baseurl | relative_url }}">Home</a>
           <a class="nav-link px-2 link-dark" href="{{ 'team' | relative_url }}">Team</a>
           <a class="nav-link px-2 link-dark" href="{{ 'gallery' | relative_url }}">Gallery</a>
         </nav>
