--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,10 @@
       <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <a class="nav-link px-2 link-secondary" href="/">Home</a>
-          <a class="nav-link px-2 link-dark" href="{{ 'team' | relative_url }}">Team</a>
-          <a class="nav-link px-2 link-dark" href="{{ 'gallery' | relative_url }}">Gallery</a>
+          {% assign current = page.url | downcase | split: '/' %}
+          <a {% if current[1] == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="/">Home</a>
+          <a {% if current[1] == 'team' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="team">Team</a>
+          <a {% if current[1] == 'gallery' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="gallery">Gallery</a>
         </nav>
       </header>
     </div>
