--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
           <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="/">Home</a>
-          <a {% if currentPage == 'team' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
-          <a {% if currentPage == 'gallery' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
+          <a {% if currentPage == '/team' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
+          <a {% if currentPage == '/gallery' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-dark" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
         </nav>
       </header>
     </div>
@@ -32,7 +32,7 @@
     </main>
     <footer>
       <div class="container">
-        <small>© 2022 TESA FC</small>
+        <small>© 2022 TESA FC.</small>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
