--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
       {{ content }}
     </main>
     <footer>
-      <div class="container">
+      <div class="container-fluid">
         <div class="py-3 my-4 border-top">
-          <small>© 2022 TESA FC.</small>
+          <small class="text-secondary">© 2022 TESA FC.</small>
         </div>
       </div>
     </footer>
