--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     </main>
     <footer>
       <div class="container-fluid">
-        <div class="py-3 my-4 border-top">
+        <div class="py-5 my-4">
           <small class="text-secondary">© 2022 TESA FC.</small>
         </div>
       </div>
