--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     <footer>
       <div class="container-fluid">
         <div class="py-5 my-4">
-          <small class="text-secondary">© 2022 TESA FC.</small>
+          <small class="text-center text-secondary">© 2022 TESA FC.</small>
         </div>
       </div>
     </footer>
