--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="height-100">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
     <footer>
       <div class="container-fluid">
         <div class="py-5 my-4">
-          <small class="text-center text-secondary">© 2022 TESA FC.</small>
+          <small class="text-center text-secondary">© 2022 TESA FC</small>
         </div>
       </div>
     </footer>
