--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
-  <body class="d-flex h-100">
-    <div class="d-flex flex-column h-100 w-100 text-white bg-dark">
+  <body>
+    <div class="vh-100 text-white bg-dark">
       <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -33,7 +33,7 @@
     <footer>
       <div class="container-fluid">
         <div class="py-5 my-4">
-          <small class="text-center text-secondary">© 2022 TESA FC</small>
+          <small class="text-center text-secondary">© 2022 TESA FC.</small>
         </div>
       </div>
     </footer>
