--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="vh-100 text-white bg-dark">
-      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+    <div class="vh-75 text-white bg-dark">
+      <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
