--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
-  <body>
-    <div class="container h-75 text-white bg-dark">
-      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
-        <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          {% assign currentPage = page.url %}
-          <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="/">Home</a>
-          <a {% if currentPage == '/team/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
-          <a {% if currentPage == '/gallery/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
-        </nav>
+  <body class="h-100">
+    <div class="h-75 text-white bg-dark">
+      <div class="container">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+          <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
+          <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            {% assign currentPage = page.url %}
+            <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="/">Home</a>
+            <a {% if currentPage == '/team/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
+            <a {% if currentPage == '/gallery/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
+          </nav>
+        </header>
       </header>
     </div>
     <main>
@@ -33,7 +35,7 @@
     <footer>
       <div class="container-fluid">
         <div class="py-5 my-4">
-          <small class="text-center text-secondary">© 2022 TESA FC.</small>
+          <small class="text-center text-secondary">© 2022 TESA FC</small>
         </div>
       </div>
     </footer>
