--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
-  <body class="h-100">
-    <div class="h-75 text-white bg-dark">
+  <body>
+    <div class="vh-100 text-white bg-dark">
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
@@ -27,7 +27,7 @@
             <a {% if currentPage == '/gallery/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
           </nav>
         </header>
-      </header>
+      </div>
     </div>
     <main>
       {{ content }}
