--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="vh-100 text-white bg-dark">
+    <div class="vh-100 text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
+    ), url('{{ page.image }}'); background-size: cover;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
@@ -29,11 +32,13 @@
         </header>
       </div>
       <div class="container">
+        <div class="d-flex align-items-center justify-content-center">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
           <p class="lead">{{ page.description }}</p>
         {% endif %}
+        </div>
       </div>
     </div>
     <main>
