--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
           </nav>
         </header>
       </div>
-      <div class="container">
+      <div>
         <div class="d-flex align-items-center justify-content-center">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
