--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         </header>
       </div>
       <div>
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="d-flex flex-wrap align-items-center justify-content-center">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
