--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="vh-100 text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
+    <div class="text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
       rgba(0, 0, 0, 0.8),
       rgba(0, 0, 0, 0.8)
-    ), url('{{ page.image }}'); background-size: contain; background-repeat: no-repeat;" {% endif %} >
+    ), url('{{ page.image }}'); background-size: cover; background-repeat: no-repeat;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
@@ -32,7 +32,7 @@
         </header>
       </div>
       <div>
-        <div class="d-flex h-100 align-self-center justify-content-center">
+        <div class="d-flex align-items-center justify-content-center">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
