--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
-    ), url('{{ page.image }}'); background-size: contain; background-repeat: no-repeat;" {% endif %} >
+    ), url('{{ page.image }}'); background-size: cover; background-repeat: no-repeat;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
@@ -32,7 +32,7 @@
         </header>
       </div>
       <div>
-        <div class="d-flex align-items-center justify-content-center py-3">
+        <div class="d-flex align-items-center justify-content-center pb-5">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
