--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         </header>
       </div>
       <div>
-        <div class="d-flex align-items-center justify-content-center pb-5">
+        <div class="d-flex align-items-center justify-content-center pb-5 my-5">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
