--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 0, 0, 0.6)
+    <div class="vh-100 text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
     ), url('{{ page.image }}'); background-size: cover; background-repeat: no-repeat;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
@@ -32,7 +32,7 @@
         </header>
       </div>
       <div>
-        <div class="d-flex align-items-center justify-content-center pb-5 my-5">
+        <div class="d-flex align-items-center justify-content-center pb-5">
         {% if page.title %}
           <h1>{{ page.title }}</h1>
           {% else %}
