--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="vh-100 text-white bg-dark" {% if page.image %} style="background-image: linear-gradient(
+    <div class="text-white bg-dark" {% if page.image %} style="height: 75%; background-image: linear-gradient(
       rgba(0, 0, 0, 0.7),
       rgba(0, 0, 0, 0.7)
     ), url('{{ page.image }}'); background-size: cover; background-repeat: no-repeat;" {% endif %} >
