--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
-  <body class="h-100">
-    <div class="text-white bg-dark" {% if page.image %} style="height: 75%; background-image: linear-gradient(
+  <body>
+    <div class="text-white bg-dark" {% if page.image %} style="height: 750px; background-image: linear-gradient(
       rgba(0, 0, 0, 0.7),
       rgba(0, 0, 0, 0.7)
-    ), url('{{ page.image }}'); background-size: cover; background-repeat: no-repeat;" {% endif %} >
+    ), url('{{ page.image }}'); background-size: cover; background-position: center;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
