--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       rgba(0, 0, 0, 0.7)
     ), url('{{ page.image }}'); background-size: cover; background-position: center;" {% endif %} >
       <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between pt-3">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">{{ site.title }}</a>
           <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             {% assign currentPage = page.url %}
