--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
     </main>
     <footer>
       <div class="container-fluid">
-        <div class="py-5 my-4 mx-auto">
-          <small class="text-center text-secondary">© 2022 TESA FC. All Right Reserved.</small>
+        <div class="py-3">
+          <small class="text-secondary">© 2022 TESA FC. All RIGHT RESERVED.</small>
         </div>
       </div>
     </footer>
