--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div class="text-white bg-dark" {% if page.image %} style="height: 50vh; background-image: linear-gradient(
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.7)
+    <div class="text-white bg-dark" {% if page.image %} style="height: 60vh; background-image: linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
     ), url('{{ page.image }}'); background-size: cover; background-position: center;" {% endif %} >
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-3">
@@ -46,8 +46,8 @@
     </main>
     <footer>
       <div class="container-fluid">
-        <div class="py-3">
-          <small class="text-secondary">© 2022 TESA FC. All RIGHT RESERVED.</small>
+        <div class="my-5">
+          <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
         </div>
       </div>
     </footer>
