--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,9 @@
     <footer>
       <div class="container-fluid">
         <div class="my-5">
-          <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
+          <p class="text-center">
+            <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
+          </p>
         </div>
       </div>
     </footer>
