--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     </main>
     <footer>
       <div class="container-fluid">
-        <div class="my-5">
+        <div class="my-5 py-3">
           <p class="text-center">
             <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
           </p>
