--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,21 +31,11 @@
           </nav>
         </header>
       </div>
-      <div>
-        <div class="position-absolute top-50 start-50 translate-middle">
-        {% if page.title %}
-          <h1>{{ page.title }}</h1>
-          {% else %}
-          <p class="lead">{{ page.description }}</p>
-        {% endif %}
-        </div>
-      </div>
-    </div>
     <main>
       {{ content }}
     </main>
     <footer>
-      <div class="container-fluid">
+      <div class="container">
         <div class="my-5 py-3">
           <p class="text-center">
             <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
