--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
   </head>
   <body>
-    <div {% if page.image %} class="text-white bg-dark" style="height: 90vh; background-image: linear-gradient(
+    <div class="text-white bg-dark" {% if page.image %} style="height: 90vh; background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ), url('{{ page.image }}'); background-size: cover; background-position: center;" {% endif %} >
