--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="{{ 'assets/favicon.ico' | relative_url }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
+    <script src="{{ 'assets/function.js' | relative_url }}"></script>
   </head>
   <body>
     <div class="text-white bg-dark" {% if page.image %} style="height: 90vh; background-image: linear-gradient(
@@ -47,6 +48,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="/assets/function.js"></script>
+    
   </body>
 </html>
