--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,6 @@
             {% assign currentPage = page.url %}
             <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="/">Home</a>
             <a {% if currentPage == '/team/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
-            <a {% if currentPage == '/gallery/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'gallery' | relative_url }}">Gallery</a>
           </nav>
         </header>
       </div>
@@ -40,7 +39,7 @@
       <div class="container">
         <div class="my-5 py-3">
           <p class="text-center">
-            <small class="text-secondary">© 2022 TESA FC. ALL RIGHT RESERVED.</small>
+            <small class="text-secondary">© 2022 TESA FOOTBALL CLUB.</small>
           </p>
         </div>
       </div>
