--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             {% assign currentPage = page.url %}
             <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="/">Home</a>
-            <a {% if currentPage == '/team/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'team' | relative_url }}">Team</a>
+            <a {% if currentPage == '/players/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
           </nav>
         </header>
       </div>
