--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
     <script src="{{ 'assets/function.js' | relative_url }}"></script>
   </head>
-  <body>
+  <body> <!--
     <div class="text-white bg-dark" {% if page.image %} style="height: 100vh; background-image: linear-gradient(
       rgba(0, 0, 0, 0.8),
       rgba(0, 0, 0, 0.8)
@@ -31,7 +31,8 @@
           </nav>
         </header>
       </div>
-    </div>
+    </div> -->
+    {% include header-image.html %}
     <main>
       {{ content }}
     </main>
