--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="text-white bg-dark" style="height: 100vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+  <div class="text-white bg-dark" style="height: 100vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: auto; background-position: center; background-repeat: no-repeat;">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between p-3">
       <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
       <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
