--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       </div>
     </div> -->
     {% if header %}
-    {% include header | append: .html %}
+    {% include header | append: '.html' %}
     {% else %}
     {% include header-image.html %}
     {% endif %}
