--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
         </header>
       </div>
     </div> -->
-    {% if header %}
-    {% include header.html %}
+    {% if page.header %}
+    {% include page.header.html %}
     {% else %}
     {% include header-image.html %}
     {% endif %}
