--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -12,10 +12,10 @@
     </div>
     <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
-        {{ page.title }}
+        <span class="fs-2 text-capitalize">{{ page.title }}</span>
       </div>
       <div>
-        {{ page.no-punggung }}
+        <span class="fs1 text-uppercase">{{ page.no-punggung }}</span>
       </div>
     </div>
   </div>
