--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -10,9 +10,9 @@
         </nav>
       </div>
     </div>
-    <div class="h-100 d-flex flex-column align-items-end justify-content-between">
+    <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
-        <span class="fs-2 text-capitalize">{{ page.title }}</span>
+        <span class="fs-1 text-capitalize">{{ page.title }}</span>
       </div>
       <div>
         <span class="fs-1 text-uppercase">{{ page.no-punggung }}</span>
