--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -10,7 +10,7 @@
         </nav>
       </div>
     </div>
-    <div class="h-100 d-flex flex-column align-items-center justify-content-center">
+    <div class="h-100 d-flex flex-column align-items-center justify-content-around">
       <div>
         <span class="fs-1 text-capitalize">{{ page.title }}</span>
       </div>
