--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="text-white bg-dark" style="height: 100vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
+  <div class="text-white bg-dark" style="height: 90vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
@@ -12,7 +12,7 @@
     </div>
     <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
-        <span class="text-center text-capitalize" style="font-size: 3rem;">{{ page.title }}</span>
+        <span class="text-center text-capitalize fw-bolder" style="font-size: 3rem;">{{ page.title }}</span>
       </div>
       <div>
         <span class="text-uppercase fw-bolder" style="font-size: 6rem;">{{ page.no-punggung }}</span>
