--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
     <main>
       {{ content }}
     </main>
+    {% include sponsor.html %}
     <footer>
       <div class="container">
         <div class="my-5 py-3">
