--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     {% assign matches = site.matches %}
-    {% for match in matches
+    {% for match in matches %}
     {% if match.status == "next match" %}
     <div class="container">
       <h1>next match</h1>
