--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,7 +14,7 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container w-100 h-100 d-flex flex-column align-items-center justify-content-center text-center">
+    <div class="container w-100 h-100 d-flex flex-column align-items-center text-center">
       <h1 class="text-uppercase">next match</h1>
       <div class="row row-cols-1">
         <div class="col">
