--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,4 +1,4 @@
-<header>
+<header style="height: 1080px;">
   <div class="text-white bg-dark h-100" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
