--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -17,7 +17,7 @@
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card bg-dark text-white">
+          <div class="card bg-dark text-white pb-5">
             <div class="card-body py-3">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <span class="text-capitalize">{{ match.competition }}</span></p>
