--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -18,7 +18,7 @@
       <div class="row row-cols-1">
         <div class="col">
           <div class="card bg-transparent text-white">
-            <div class="card-body py-3">
+            <div class="card-body border-0 py-3">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <span class="text-capitalize">{{ match.competition }}</span></p>
               <p class="card-text tel"><span class="text-capitalize">{{ match.date | date: "%d %B %Y • %R" | append: " WIB" }}</span></p>
